src/components/grid/grid.css
.grid {
  display: grid;
}

.grid.aside {
  @media (min-width: 768px) {
    grid-template-columns: 2fr 1fr;
    grid-gap: 2rem;
  }

  @media (min-width: 768px) {
    & .md:first-of-type {
      @apply text-left !important;
    }

    & .md:last-of-type {
      @apply text-right;
    }
  }
}

.grid.gallery {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: auto 1fr;
  grid-gap: 1rem;

  & .rows-one {
    grid-row: span 1;

    & .gatsby-image-wrapper {
      @apply .aspect-ratio-43/25;
    }
  }

  & .rows-two {
    grid-row: span 2;

    & .gatsby-image-wrapper {
      @apply .aspect-ratio-43/25;
    }
  }

  & .rows-two.cols-one {
    & .gatsby-image-wrapper {
      @apply .aspect-ratio-140/171;
    }
  }

  @media (min-width: 640px) {
    & .rows-two.cols-one {
      & .gatsby-image-wrapper {
        @apply .aspect-ratio-43/25;
      }
    }
  }

  & .rows-two.cols-one + .rows-two.cols-one {
    & .gatsby-image-wrapper {
      @apply .aspect-ratio-140/171;
    }
  }

  & .cols-one,
  & .cols-two {
    grid-column: span 2;
  }

  & .cols-one.rows-two div {
    height: 100%;
  }

  @media (min-width: 640px) {
    & .rows-two {
      grid-row: span 2;
    }

    & .rows-one {
      grid-row: span 1;
    }

    & .cols-two {
      grid-column: span 2;
    }

    & .cols-one {
      grid-column: span 1;
    }
  }
}

.grid.projects {
  column-gap: 1rem;
  grid-row-gap: 2rem;

  & div[data-label] {
    cursor: none;
  }

  @media (min-width: 768px) {
    grid-template-columns: 1fr 1fr;
  }
}

.grid.copy_blocks {
  @media (min-width: 768px) {
    grid-template-columns: 1fr 1fr;
    grid-column-gap: 1rem;
    grid-row-gap: 3rem;
  }
}

.grid.logo_matrix {
  grid-template-columns: repeat(4, 1fr);
  align-items: center;
  grid-gap: 2rem;

  & > div {
    max-height: 100px;
  }

  @media (max-width: 768px) {
    grid-template-columns: repeat(2, 1fr);
  }
}

